--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Plotter for parametric and polynomial curve graphs using Java2D and Swing.
+GUI for parametric and polynomial curve graphs using Java2D and Swing.
