Fix minor review points

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-GUI for parametric and polynomial curve graphs using Java2D and Swing.
+Plotter for parametric and polynomial curve graphs using Java2D and Swing.
